--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="flex justify-center items-center content-center flex-col">
         <h1 class="font-bold text-2xl bg-blue-300 w-full text-center p-2">Upload Your Latest Profile Picture</h1>
-        <form class="mt-5" action="/profile/upload" method="post" enctype="multipart/form-data">
+        <form class="mt-5" action="/updateProfilePicture" method="post" enctype="multipart/form-data">
             <input type="file" class="border-2 " name="image"/>
             <input type="submit" value="Upload" class="text-white border-2 p-2 px-3 bg-blue-600 rounded-md"/>
         </form>
