--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
             <label class="col-span-1 text-xl">Password</label>
             <input class="col-span-5 border border-black rounded-xl p-2" type="password" name="password"
                 placeholder="Enter your password" />
-            <input class="cursor-pointer col-span-1 bg-blue-700 p-2 px-3 rounded-xl text-center text-white hoverbg-blue-900"
+            <input class="cursor-pointer col-span-1 bg-blue-700 hover:bg-blue-900 hover:p-3 transition-all duration-700 p-2 px-3 rounded-xl text-center text-white hoverbg-blue-900"
                 type="submit" value="Register" />
             <a href="/login" class="cursor-pointer col-span-4 underline text-blue-500 hover:text-blue-700 font-bold">Already have an
                 account?</a>
